# truc

./: .clippy.toml  Cargo.toml  Cross.toml  LICENSE  README.md  justfile
.github/workflows/: _build.yml  _cross_build.yml  ci.yml  codecov.yml  rust.yml
asm_tests/: .gitignore
asm_tests/truc_asm_1/: Cargo.toml  build.rs  should_convert_vec_one_to_one_with_noop.asm.snap  should_convert_vec_with_noop.asm.snap  should_convert_with_noop.asm.snap  should_convert_with_noop.llvm.snap  tests.txt
asm_tests/truc_asm_1/src/: main.rs
examples/fibonacci/: Cargo.toml  build.rs
examples/fibonacci/src/: main.rs  truc.rs
examples/machin/machin/: Cargo.toml  build.rs
examples/readme/: Cargo.toml  build.rs
examples/readme/src/: main.rs
examples/target_types/: Cargo.toml
examples/target_types/src/: main.rs
internal/truc_analyzer/: Cargo.toml
internal/truc_analyzer/src/: main.rs  variant_builder.rs
machin/: Cargo.toml  build.rs
machin/src/: main.rs  truc.rs
machin_data/: Cargo.toml
machin_data/src/: lib.rs
machin_target_types/: Cargo.toml
machin_truc/: Cargo.toml  build.rs
machin_truc/src/: lib.rs
scripts/: asm_test.sh  cross_msrv_pin_dependencies.sh  msrv_pin_dependencies.sh  switch_rust_toolchain.sh
skatik_prod/: Cargo.toml  build.rs
skatik_prod/src/: chain.rs  main.rs  truc.rs
skatik_prod_codegen/: Cargo.toml
skatik_prod_codegen/src/: chain.rs  graph.rs  lib.rs  stream.rs  support.rs
skatik_prod_codegen/src/filter/: anchor.rs  dedup.rs  group.rs  in_place.rs  mod.rs  sink.rs  sort.rs
skatik_prod_codegen/src/filter/fork/: extract_fields.rs  mod.rs
skatik_prod_codegen/src/filter/hof/index/: wordlist.rs
skatik_prod_data/: Cargo.toml
skatik_prod_data/src/: lib.rs
src/: lib.rs
src/record/: definition.rs
streamink/: Cargo.toml
streamink/src/: dedup.rs  group.rs  lib.rs  sort.rs  vector.rs
streamink/src/io/: buf.rs
streamink/src/stream/: sync.rs
streamink/src/sync/: mpsc.rs
streamink/tests/: stream_and_then_map.rs  stream_map_err.rs
truc/: Cargo.toml
truc/src/: generator.rs  lib.rs
truc/src/generator/: config.rs  fragment.rs  mod.rs
truc/src/generator/fragment/: clone.rs  data_records.rs  drop_impl.rs  from_previous_record_data_records.rs  from_previous_record_impls.rs  from_previous_record_unnamed_fields_impls.rs  from_unnamed_fields_impls.rs  from_unpacked_record_impls.rs  mod.rs  record.rs  record_impl.rs  record_unnamed_impl.rs  serde.rs
truc/src/record/: definition.rs  mod.rs  type_name.rs  type_resolver.rs
truc/src/record/definition/: convert.rs  mod.rs
truc/src/record/definition/builder/: mod.rs
truc/src/record/definition/builder/generic/: mod.rs
truc/src/record/definition/builder/generic/variant/: dummy.rs  mod.rs
truc/src/record/definition/builder/native/: mod.rs
truc/src/record/definition/builder/native/variant/: basic.rs  dummy.rs  mod.rs  simple.rs
truc/src/record/definition/builder/variant/: basic.rs  dummy.rs  mod.rs  simple.rs
truc_runtime/: Cargo.toml
truc_runtime/src/: convert.rs  data.rs  lib.rs
