[package]
name = "machin"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"

[dependencies]
assert_matches = "1"
machin_data = { path = "../machin_data" }
static_assertions = "1"
truc_runtime = { path = "../truc_runtime" }

[build-dependencies]
machin_data = { path = "../machin_data" }
serde_json = "1"
truc = { path = "../truc" }
