[package]
name = "machin_target_types"
version = "0.1.1"
edition = "2021"
rust-version = "1.56.1"
license-file = "../LICENSE"
description = "Stuff"
documentation = "https://docs.rs/machin_target_types"
repository = "https://github.com/arnodb/truc"
readme = "../README.md"

[dependencies]
machin_data = { path = "../machin_data" }
truc = { path = "../truc" }
