[package]
name = "skatik_prod"
version = "0.1.0"
edition = "2021"

[dependencies]
skatik_prod_data = { path = "../skatik_prod_data" }
static_assertions = "1"
streamink = { path = "../streamink" }
truc_runtime = { path = "../truc_runtime" }

[build-dependencies]
skatik_prod_codegen = { path = "../skatik_prod_codegen" }
