[package]
name = "truc"
version = "0.1.1-dev"
edition = "2021"
rust-version = "1.56.1"
license-file = "../LICENSE"
description = "Stuff"
documentation = "https://docs.rs/truc"
repository = "https://github.com/arnodb/truc"
readme = "../README.md"

[dependencies]
codegen = "0.1"
derive_more = "0.99"
derive-new = "0.5"
itertools = "0.10"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
truc_runtime = { version = "0.1.1-dev", path = "../truc_runtime" }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
