[package]
name = "truc"
version = "0.2.1-dev"
edition = "2021"
rust-version = "1.56.1"
license-file = "../LICENSE"
description = "Stuff"
documentation = "https://docs.rs/truc"
repository = "https://github.com/arnodb/truc"
readme = "../README.md"

[dependencies]
codegen = "0.2"
derive_more = "0.99"
derive-new = "0.7"
itertools = "0.13"
maplit = "1"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
truc_runtime = { version = "0.2.1-dev", path = "../truc_runtime" }

[dev-dependencies]
assert_matches = "1"
pretty_assertions = "1"
rand = "0.8"
rand_chacha = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
