[package]
name = "truc"
version = "0.2.2"
edition = "2021"
rust-version = "1.56.1"
license-file = "../LICENSE"
description = "Rust code generator for safe, fixed size, evolving records."
documentation = "https://docs.rs/truc"
repository = "https://github.com/arnodb/truc"
readme = "../README.md"

[dependencies]
codegen = "0.2"
derive_more = "0.99"
derive-new = "0.7"
itertools = "0.13"
maplit = "1"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
truc_runtime = { version = "0.2.2", path = "../truc_runtime" }
uuid = { version = "1", optional = true }

[dev-dependencies]
assert_matches = "1"
pretty_assertions = "1"
rand = "0.8"
rand_chacha = "0.3"
rstest = "0.12"

[features]
default = []
msrv = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
