[package]
name = "truc_runtime"
version = "0.2.2-dev"
edition = "2021"
rust-version = "1.56.1"
license-file = "../LICENSE"
description = "Rust code generator for safe, fixed size, evolving records - runtime."
documentation = "https://docs.rs/truc_runtime"
repository = "https://github.com/arnodb/truc"
readme = "../README.md"

[dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
