[package]
name = "truc_asm_1"
version = "0.1.0"
edition = "2021"

[dependencies]
static_assertions = "1"
truc_runtime = { path = "../../truc_runtime" }

[features]
default = []
should_convert_with_noop = []
should_convert_vec_with_noop = []
should_convert_vec_one_to_one_with_noop = []

[build-dependencies]
serde_json = "1"
truc = { path = "../../truc" }
